unpackaged/main/default/objects/GBS_Country_to_Center__mdt/GBS_Country_to_Center__mdt.object-meta.xml
<CustomObject>
    <label>GBS Country to Center</label>
    <pluralLabel>GBS Countries to Centers</pluralLabel>
</CustomObject>